db postgres init
