# docs/swagger.yaml
@@ -7,8 +7,6 @@ definitions:
         type: string
       created_at:
         type: string
-      deleted_at:
-        type: string
       id:
         type: string
       title:
@@ -117,6 +115,10 @@ paths:
                     $ref: '#/definitions/models.Article'
                   type: array
               type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.JSONErrorResult'
       summary: List Article
       tags:
       - articles
@@ -242,6 +244,19 @@ paths:
       consumes:
       - application/json
       description: get author
+      parameters:
+      - description: "10"
+        in: query
+        name: limit
+        type: integer
+      - description: "0"
+        in: query
+        name: offset
+        type: integer
+      - description: string default
+        in: query
+        name: search
+        type: string
       produces:
       - application/json
       responses:
