# models/article.go
@@ -11,9 +11,9 @@ type Article struct {
 	Id string `json:"id"`
 	Content
 	AuthorId  string     `json:"author_id"`
-	CreatedAt *time.Time `json:"created_at"`
+	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt *time.Time `json:"updated_at"`
-	DeletedAt *time.Time `json:"deleted_at"`
+	DeletedAt *time.Time `json:"-"`
 }
 
 type CreateArticleModel struct {
@@ -30,7 +30,7 @@ type GetArticleByIdModel struct {
 	Id string `json:"id"`
 	Content
 	Author    Author     `json:"author"`
-	CreatedAt *time.Time `json:"created_at"`
+	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt *time.Time `json:"updated_at"`
 	DeletedAt *time.Time `json:"deleted_at"`
 }
